--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
-<p>hi</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cloudflare Login Test</title>
+    <style>
+        body { font-family: sans-serif; display: flex; justify-content: center; padding-top: 50px; background: #f4f4f9; }
+        .login-card { background: white; padding: 2rem; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); width: 300px; }
+        input { width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box; }
+        button { width: 100%; padding: 10px; background: #007bff; color: white; border: none; border-radius: 4px; cursor: pointer; }
+        button:hover { background: #0056b3; }
+        #message { margin-top: 15px; font-weight: bold; text-align: center; }
+        .success { color: green; }
+        .error { color: red; }
+    </style>
+</head>
+<body>
+
+<div class="login-card">
+    <h2>Login</h2>
+    <input type="email" id="email" placeholder="Email (admin@gmail.com)" required>
+    <input type="password" id="password" placeholder="Password" required>
+    <button onclick="attemptLogin()">Login</button>
+    <div id="message"></div>
+</div>
+
+<script>
+    async function attemptLogin() {
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
+        const messageDiv = document.getElementById('message');
+        
+        messageDiv.innerText = "Checking...";
+        messageDiv.className = "";
+
+        try {
+            const response = await fetch('https://txm.fullynerfed.workers.dev/login', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ email, password })
+            });
+
+            const data = await response.json();
+
+            if (response.ok && data.success) {
+                messageDiv.innerText = "✅ " + data.message;
+                messageDiv.className = "success";
+            } else {
+                messageDiv.innerText = "❌ " + (data.error || "Login Failed");
+                messageDiv.className = "error";
+            }
+        } catch (err) {
+            messageDiv.innerText = "Error connecting to Worker.";
+            messageDiv.className = "error";
+            console.error(err);
+        }
+    }
+</script>
+
+</body>
+</html>
